[gd_scene load_steps=4 format=3 uid="uid://cyxdkxlpi1gyi"]

[ext_resource type="Script" path="res://scenes/Collectable_scenes/boilermaker_train.gd" id="1_rueol"]
[ext_resource type="Texture2D" uid="uid://bqv5vejnbcjpl" path="res://scenes/Collectable_scenes/Collectables/Boilermaker train.webp" id="2_d3b6n"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_r3qtj"]
size = Vector2(68, 42)

[node name="boilermaker_train" type="Area2D"]
script = ExtResource("1_rueol")

[node name="Sprite2D" type="Sprite2D" parent="."]
z_index = -1
position = Vector2(2, -2)
scale = Vector2(0.173214, 0.240782)
texture = ExtResource("2_d3b6n")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(2, -2)
shape = SubResource("RectangleShape2D_r3qtj")

[node name="collect_button" type="Button" parent="."]
z_index = 1
offset_left = -46.0
offset_top = -73.0
offset_right = 49.0
offset_bottom = -42.0
text = "Collect"

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_body_exited"]
[connection signal="pressed" from="collect_button" to="." method="_on_collect_button_pressed"]
